# mandarin-pronunciation-coach

./: .env.example  .gitignore  LICENSE  PRODUCT.md  README.md  config.py  pyproject.toml  pytest.ini  requirements.txt  实验报告.md
data/psc_human_dataset/: README.md  example_clip_specs.json  example_clips.json  manifest.json
data/psc_human_dataset/benchmarks/: human_reference_benchmark.csv  human_reference_benchmark.json  (+1 more)
data/reference_texts/: 01_greeting.txt  02_classic.txt  03_psc_sample.txt
docs/: CHANGELOG.md  DESIGN.md  USAGE.md
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: audit_psc_asr_transcripts.py  benchmark_human_reference.py  benchmark_pronunciation.py  collect_psc_reference_audio.py  generate_example_audio.py  generate_psc_example_assets.py  smoke_check.py  transcribe_psc_human_dataset.py
src/: __init__.py  pipeline.py
src/app/: gradio_app.py
src/asr/: __init__.py  aligner.py  models.py  recognizer.py
src/audio/: __init__.py  capture.py  preprocess.py
src/evaluation/: speechocean_eval.py
src/features/: __init__.py  pitch.py  spectral.py
src/feedback/: __init__.py  report.py  tts.py  visualize.py
src/scoring/: __init__.py  accuracy.py  aggregator.py  completeness.py  confidence.py  fluency.py  prosody.py  tone.py
src/server/: __init__.py  clipper.py  examples.py  main.py  render.py  schemas.py
tests/: conftest.py  test_aligner_fallback.py  test_audio_preprocess.py  test_benchmark_pronunciation.py  test_features.py  test_pipeline_integration.py  test_scoring.py
(+205 files in other folders)
