[project]
name = "mandarin-pronunciation-coach"
version = "0.1.0"
description = "普通话发音评测与逐字反馈系统"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "edge-tts>=6.1",
    "gradio>=6.0,<6.11",
    "jieba>=0.42",
    "jiwer>=3.0",
    "librosa>=0.10",
    "matplotlib>=3.7",
    "numpy>=1.24,<2.0",
    "pandas>=2.0",
    "pypinyin>=0.49",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "soundfile>=0.12",
    "torch>=2.0",
    "torchaudio>=2.0",
    "transformers>=4.40",
    "webrtcvad>=2.0.10",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[project.optional-dependencies]
aliyun = [
    "dashscope>=1.23",
]
mimo = [
    "openai>=1.0",
]
eval = [
    "datasets>=2.18",
]
